新增防抖函数及深浅拷贝

--- a/原生js/防抖与节流/throttle.html
+++ b/原生js/防抖与节流/throttle.html
@@ -57,6 +57,10 @@ let nowtime=function() {
 
 //     return throttled;
 //   };
+/*
+按照自己的理解去将underscore中的
+节流函数改造为es6的写法
+*/
 let throttle=(func, wait)=> {
     
     let timeout, result;
